prevent save image from showing on mobile

--- a/styles.css
+++ b/styles.css
@@ -37,4 +37,6 @@ body {
   width: 100%;
   object-fit: cover;
   position: absolute;
+  -webkit-user-select:none;
+  -webkit-touch-callout:none;
 }
